--- a/Dogs_vs_Cats_transferLearning.ipynb
+++ b/Dogs_vs_Cats_transferLearning.ipynb
@@ -30,11 +30,7 @@
       "metadata": {
         "id": "B2pcxh5mCqBZ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9c79aefc-5b92-4306-9d4a-836d1694f78a"
+        "colab": {}
       },
       "source": [
         "from __future__ import absolute_import, division, print_function, unicode_literals\n",
@@ -51,18 +47,12 @@
         "\n",
         "import os\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -85,11 +75,12 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 955
         },
-        "outputId": "04f21ad3-92ea-4fea-ec39-f65c14d4021c"
+        "outputId": "ad23ddbb-6e28-40c7-d177-1f94dc4646e5"
       },
       "source": [
+        "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
         "SPLIT_WEIGHTS = (8, 1, 1)\n",
         "splits = tfds.Split.TRAIN.subsplit(weighted=SPLIT_WEIGHTS)\n",
         "\n",
@@ -97,48 +88,11 @@
         "    'cats_vs_dogs', split=list(splits),\n",
         "    with_info=True, as_supervised=True)"
       ],
-      "execution_count": 3,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\u001b[1mDownloading and preparing dataset cats_vs_dogs (786.68 MiB) to /root/tensorflow_datasets/cats_vs_dogs/2.0.1...\u001b[0m\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/urllib3/connectionpool.py:847: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-            "  InsecureRequestWarning)\n",
-            "WARNING:absl:1738 images were corrupted and were skipped\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_datasets/core/file_format_adapter.py:209: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use eager execution and: \n",
-            "`tf.data.TFRecordDataset(path)`\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_datasets/core/file_format_adapter.py:209: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use eager execution and: \n",
-            "`tf.data.TFRecordDataset(path)`\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[1mDataset cats_vs_dogs downloaded and prepared to /root/tensorflow_datasets/cats_vs_dogs/2.0.1. Subsequent calls will reuse this data.\u001b[0m\n",
             "WARNING:tensorflow:Entity <function _build_ds_from_instruction at 0x7f1a6a832d08> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n"
           ],
           "name": "stdout"
@@ -860,6 +814,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lho8h0YrTlSf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Adding new layers to the pre-trained layer"
       ]
     },
     {
