--- a/Dogs_vs_Cats_transferLearning.ipynb
+++ b/Dogs_vs_Cats_transferLearning.ipynb
@@ -69,6 +69,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "29vhBUlHT8Tt",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Loading the data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "_Tm8Yl64ie3b",
@@ -254,6 +264,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PMXHMy61UFbz",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Sample image from the dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Q-VZFgBqie1I",
@@ -298,6 +318,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P8w59HusUJa8",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Resizing images "
       ]
     },
     {
@@ -429,7 +459,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Loading a pre-trained model**"
+        "### Loading a pre-trained model"
       ]
     },
     {
@@ -823,7 +853,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Adding new layers to the pre-trained layer"
+        "### Adding new layers to the pre-trained layer"
       ]
     },
     {
@@ -1050,6 +1080,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Fl0DtTfUb9I",
+        "colab_type": "text"
+      },
+      "source": [
+        "### training the new model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8scMxNXDkZjS",
@@ -1157,6 +1197,16 @@
           },
           "execution_count": 25
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qPtnhr-iUgAC",
+        "colab_type": "text"
+      },
+      "source": [
+        "### accuracy and loss plots"
       ]
     },
     {
